--- a/src/public/index.html
+++ b/src/public/index.html
@@ -224,6 +224,9 @@
     </div>
 
     <script>
+        // Set your deployed Railway API base URL here
+        const API_BASE = 'https://web-production-3814.up.railway.app';
+
         // Show/hide loading indicator
         function showLoading(show) {
             document.getElementById('loading').style.display = show ? 'block' : 'none';
@@ -307,7 +310,7 @@
 
             try {
                 showLoading(true);
-                const response = await fetch('/api/addSchool', {
+                const response = await fetch(`${API_BASE}/api/addSchool`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
@@ -344,7 +347,7 @@
 
             try {
                 showLoading(true);
-                const response = await fetch(`/api/listSchools?latitude=${latitude}&longitude=${longitude}`);
+                const response = await fetch(`${API_BASE}/api/listSchools?latitude=${latitude}&longitude=${longitude}`);
                 const result = await response.json();
                 
                 const schoolList = document.getElementById('schoolList');
