--- a/src/public/index.html
+++ b/src/public/index.html
@@ -167,7 +167,7 @@
             <h2>Add New School</h2>
             <div id="successMessage" class="success-message"></div>
             <div id="errorMessage" class="error-message"></div>
-            <form id="addSchoolForm">
+            <form id="addSchoolForm" autocomplete="off">
                 <div class="form-group">
                     <label for="name">School Name:</label>
                     <input type="text" id="name" required 
